# setup-dot-Py

./: .gitignore  .pre-commit-config.yaml  README.md  firm_search.py  pyproject.toml  setup.py  setup_logging.py  setup_venv.py  update_venv.py  update_venv.sh
src/setup_dot_py_lmarren2/: __init__.py  setup_logging.py
