[project]
name = "setup_dot_py_lmarren2"
version = "0.0.1"
authors = [
  { name="Luke Marren" },
]
description = "Tool that initializes a proper python development environment."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lmarren2/setup-dot-py"
